# Legion-SNAP

./: CMakeLists.txt  README.md
input/: base.in  mms.in  test.in
src/: Makefile  convergence.cc  convergence.h  expxs.cc  expxs.h  gpu_expxs.cu  gpu_inner.cu  gpu_outer.cu  gpu_sweep.cu  init.cc  init.h  inner.cc  inner.h  main.cc  mapper.cc  mms.cc  mms.h  outer.cc  outer.h  snap.cc  snap.h  snap_cuda_help.h  snap_types.h  sweep.cc  sweep.h
